--- a/angular-bookstore/tsconfig.json
+++ b/angular-bookstore/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compileOnSave": false,
+  //"enableIvy": false,
+  //"importHelpers": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
